# variadic_ip

./: .travis.yml  CMakeLists.txt  a.out  filter  filter.cpp  filter.h  input  main.cpp  process.h  test.cpp  variadic.cpp
